# fastproto

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  pr-title.yml  release.yml  test.yml
bench/: compare.py
python/fastproto/: __init__.py  _core.pyi  plugin.py  wellknown.py
python/fastproto/plugin/: __init__.py  _index.py  _render.py  _validate.py
scripts/: regen.py  set_version.py
src/: lib.rs
src/decode/: mod.rs
src/descriptor/: mod.rs  tests.rs
src/encode/: mod.rs
src/message/: mod.rs
src/parse/: mod.rs  tests.rs
src/wellknown/: mod.rs  tests.rs
src/wire/: mod.rs  tests.rs
tests/: test_concurrency.py  test_crossfile.py  test_fuzz.py  test_imports.py  test_mapcollide.py  test_nested.py  test_plugin.py  test_rich.py  test_scalars.py  test_tree.py  test_wellknown.py  test_wire_semantics.py
tests/fixtures/: event.fds  imports_dep.fds  imports_main.fds  mapcollide.fds  nested.fds  profile.fds  rich.fds  scalars.fds  tree.fds  wellknown.fds  wkt.fds
tests/protos/: common.proto  event.proto  imports_dep.proto  imports_main.proto  mapcollide.proto  nested.proto  profile.proto  rich.proto  scalars.proto  tree.proto  wkt.proto
