[package]
name = "fastproto"
version = "0.1.1"
authors = ["pkozhem <pkozhem@gmail.com>"]
description = "FastProto is fast and efficient protobuf library for Python, built on the top of Rust."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pkozhem/fastproto"
edition = "2021"

[lib]
name = "fastproto"
crate-type = ["cdylib"]

[dependencies]
# abi3-py312: build a single stable-ABI wheel that works on CPython 3.12+
# (and future versions) without recompiling per Python release.
pyo3 = { version = "0.25.0", features = ["abi3-py312"] }

[dev-dependencies]
# Property-based tests for the Python-free layers (wire, parse): arbitrary
# bytes must never panic the parser. Runs as part of `cargo test`.
proptest = "1"
