[project]
name = "fastproto"
description = "FastProto is fast and efficient protobuf library for Python, built on the top of Rust."
authors = [{ name = "pkozhem", email = "pkozhem@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["src/fastproto.pyi"]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"
